# 3d-cube-demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: math3d.h  types.h
resources/macos/: Info.plist
src/: main.c  math3d.c
